--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "awesome-typescript-loader": "^5.2.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "source-map-loader": "^0.2.4",
+    "typescript": "^3.3.3333"
   },
   "scripts": {
     "start": "react-scripts start",
