--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "node-sass": "^4.11.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "source-map-loader": "^0.2.4",
     "typescript": "^3.3.3333"
